# my-arithmetic-antonin-rouxel

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  README.adoc  README.md  pyproject.toml
.github/.workflow/: action.yaml
.github/workflows/: action.yml  build.yml  coverage.yml  deploy.yml  test.yml
rapport/: index.adoc  style.yml
rapport/contents/: chapitre1.adoc  chapitre2.adoc  chapitre3.adoc  chapitre4.adoc  chapitre5.adoc  chapitre6.adoc  chapitre7.adoc
source/: conf.py  index.rst
src/my_arithmetic_antonin_rouxel/: __about__.py  pgcd.py
tests/: __init__.py  test_gcd.py  test_pgcd.py
