[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "my-arithmetic-antonin-rouxel"
dynamic = ["version"]
description = ''
readme = "README.adoc"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Antonin Rouxel", email = "antonin.rouxel44@outlook.fr" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/anrouxel/my-arithmetic-antonin-rouxel#readme"
Issues = "https://github.com/anrouxel/my-arithmetic-antonin-rouxel/issues"
Source = "https://github.com/anrouxel/my-arithmetic-antonin-rouxel"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/my_arithmetic_antonin_rouxel tests}"

[tool.coverage.run]
source_pkgs = ["my_arithmetic_antonin_rouxel", "tests"]
branch = true
parallel = true
omit = [
  "src/my_arithmetic_antonin_rouxel/__about__.py",
]

[tool.coverage.paths]
my_arithmetic_antonin_rouxel = ["src/my_arithmetic_antonin_rouxel", "*/my-arithmetic-antonin-rouxel/src/my_arithmetic_antonin_rouxel"]
tests = ["tests", "*/my-arithmetic-antonin-rouxel/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.coverage]
detached = true
dependencies = [
  "coverage[toml]>=6.2",
  "lxml",
]

[tool.hatch.envs.coverage.scripts]
combine = "coverage combine {args}"
report-xml = "coverage xml"
report-uncovered-html = "coverage html --skip-covered --skip-empty"